feat; challenge finished

--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    :root {
+      font-family: 'Outfit', sans-serif;
+      --white: hsl(0, 0%, 100%);
+      --light-gray: hsl(212, 45%, 89%);
+      --grayish-blue: hsl(220, 15%, 55%);
+      --dark-blue: hsl(218, 44%, 22%);
+      --header-font-weight: 700;
+      --header-font-size: 1.4rem;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+    }
+
+    body {
+      --background-color: var(--light-gray);
+      min-height: 100vh;
+      background-color: var(--background-color);
+      font-size: 15px;
+    }
   </style>
 </head>
 <body>
